--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
     width: 600px;
     padding-left:50px;
     height: 1100px;
+    border-radius: 2%;
+    box-shadow: 0px 0px 10px 10px rgba(0, 0, 0, 25);
     
     
 }
@@ -36,6 +38,7 @@
     width: 90px;
     height: 80px;
     border-radius: 10px;  
+    padding-left: 6%;
 }
 #banana{
     width: 90px;
@@ -51,7 +54,7 @@
     position: relative;
     left: 150px;
     width: 450px;
-    height: 980px;
+    height: 962.7px;
     
     bottom:1000px;
 }
